# Cookie_Banner_Scraper

./: .gitignore  README.md  SELECTORS.JSON  Thesis_Data_2.xlsx  best_snippet.html  filtered.html  filtered_lengths.xlsx  html_parser.py  llm_inspect.py  main.py  pyproject.toml
input_files/: Thesis_Data_2.xlsx  test.csv  test.xlsx  test_subset.csv  train.csv  train.xlsx  val.csv  val.xlsx
output/: filtered.html
src/: file_upload.py  html_parser.py  llm_inspect.py  main.py
