[project]
name = "banner-scraper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9, < 3.14"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false